crates/lsharp-ir/src/lower/snapshots/lsharp_ir__lower__tests__lower_match_variable.snap
---
source: crates/lsharp-ir/src/lower/tests.rs
expression: module.dump()
---
fn main() -> i64:
  locals: i64, i64
  i64.const 42
  local.set 0
  local.get 0
  local.set 1
  local.get 1
  i64.const 1
  i64.add
