crates/lsharp-ir/src/lower/snapshots/lsharp_ir__lower__tests__lower_not_operator.snap
---
source: crates/lsharp-ir/src/lower/tests.rs
expression: module.dump()
---
fn main() -> i64:
  i64.const 1
  i64.const 0
  i64.eq
  i64.extend_i32_s
