crates/lsharp-ir/src/lower/snapshots/lsharp_ir__lower__tests__lower_print_call.snap
---
source: crates/lsharp-ir/src/lower/tests.rs
expression: module.dump()
---
fn main() -> i64:
  i64.const 42
  call 0
  i64.const 0
