crates/lsharp-ir/src/lower/snapshots/lsharp_ir__lower__tests__lower_string_literal.snap
---
source: crates/lsharp-ir/src/lower/tests.rs
expression: module.dump()
---
fn main() -> i64:
  locals: i64
  i64.const 13
  call 1
  local.set 0
  local.get 0
  i32.wrap_i64
  i32.const 1
  i32.store offset=0
  local.get 0
  i32.wrap_i64
  i32.const 5
  i32.store offset=4
  local.get 0
  i32.wrap_i64
  i32.const 8
  i32.add
  i32.const 512
  i32.const 5
  memory.copy
  local.get 0
  call 4
  i64.const 0
  drop
  i64.const 0
