crates/lsharp-ir/src/lower/snapshots/lsharp_ir__lower__tests__lower_trait_dispatch.snap
---
source: crates/lsharp-ir/src/lower/tests.rs
expression: module.dump()
---
fn main() -> i64:
  i64.const 42
  call 13

fn Show_Int_show(i64) -> i64:
  local.get 0
  i64.const 1
  i64.add
